Added group closeness and group degree centrality

--- a/Codes/Facebook/facebook.ipynb
+++ b/Codes/Facebook/facebook.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,17 +679,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "groupcloseness_dict = nx.group_closeness_centrality(G,D)\n",
-    "nx.set_node_attributes(G, groupcloseness_dict, 'groupcloseness')"
+    "groupcloseness = nx.group_closeness_centrality(G,D)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +700,7 @@
     }
    ],
    "source": [
-    "print(groupcloseness_dict)"
+    "print(groupcloseness)"
    ]
   },
   {
@@ -798,6 +797,24 @@
    ],
    "source": [
     "plt.plot(avgDegree, NGbyN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.05009920634920635\n"
+     ]
+    }
+   ],
+   "source": [
+    "groupdegree = nx.group_degree_centrality(G,D)\n",
+    "print(groupdegree)"
    ]
   },
   {
